--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=APIONE
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
+
+API_TOKEN=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +13,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel9st
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_HOST_HOS=
+DB_PORT_HOS=3306
+DB_DATABASE_HOS=hos
+DB_USERNAME_HOS=
+DB_PASSWORD_HOS=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
